--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
           <div class="collapse navbar-collapse" id="myNavbar">
        
             <ul id="link" class="nav navbar-nav navbar-right">
-               <li class="dropdown" id="first-link">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">More </a>   
+                <li><a class="dropdown-toggle" data-toggle="dropdown" href="#">About Us</a></li>
+                <li class="dropdown" id="first-link">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Chrome apk</a>   
               </li>
-              <li><a class="dropdown-toggle" data-toggle="dropdown" href="#">More </a></li>
+              
               <li id="button-link1"><a href='#'>Sign In</a></li>
               <li id="button-link"><a href="#">Sign Up</a></li>
             </ul>
