--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </nav>
 
       <div class="containere">
-        <div id="logo"><h1 class="logo">hulu</h1>
+        <div id="logo"><h1 class="logo1">hulu</h1>
           <div class="CTA">
             <h1>Get $10</h1>
             </div>
@@ -133,10 +133,6 @@
           
         </div>
       </div>
-      
-      <footer>
-        <p>made by <a href="https://codepen.io/juliepark"> julie</a> ♡
-      </footer>
 
       <script>$("nav a").click(function (e) {
         e.preventDefault();
