--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
       <div class="containere">
         <div id="logo"><h1 class="logo1">hulu</h1>
           <div class="CTA">
-            <h1>Get $10</h1>
             </div>
         </div>
         <div class="leftbox">
@@ -127,11 +126,56 @@
             <p></p>
             <h2>Your Devices <button class="btn">Manage Devices</button></h2>
             <p></p>
-            <h2>Referrals <button class="btn">get $10</button></h2>
          <p></p>
           </div>
           
         </div>
+      </div>
+      <br><br><br><br><br><br>
+      <div class="containerp">
+        <div class="row">
+            <div class="col">
+              <p class="main_title"><span>Check out more Get QR ideas</span></p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-3">
+              <div class="box">
+                <div class="box-icon"> <span class="fa fa-4x fa-pencil"></span> </div>
+                <div class="info">
+                  <h4 class="text-center">Dynamic QR codes</h4>
+                  <p>Edit and change your QR codes anytime.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="box">
+                <div class="box-icon"> <span class="fa fa-4x fa-tasks"></span> </div>
+                <div class="info">
+                  <h4 class="text-center">Bulk Creation</h4>
+                  <p>Create and edit many QR codes in no time.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="box">
+                <div class="box-icon"> <span class="fa fa-4x fa-bar-chart"></span> </div>
+                <div class="info">
+                  <h4 class="text-center">Scan Statistics</h4>
+                  <p>Track your QR codes and get insights about scans.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="box">
+                <div class="box-icon"> <span class="fa fa-4x fa-paint-brush"></span> </div>
+                <div class="info">
+                  <h4 class="text-center">Stylize Your Design</h4>
+                  <p>Create transparent QR codes and reusable designs.</p>
+                </div>
+              </div>
+            </div>
+          </div>
       </div>
 
       <script>$("nav a").click(function (e) {
