--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               </li>
               
               <li id="button-link1"><a href='#'>Sign In</a></li>
-              <li id="button-link"><a href="#">Sign Up</a></li>
+              <li id="button-link"><a href="signup.html">Sign Up</a></li>
             </ul>
           </div>
         </div>
