--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               </li>
               
               <li id="button-link1"><a href='#'>Sign In</a></li>
-              <li id="button-link"><a href="https://hemkeshraina.github.io/get_qr_molog/signup">Sign Up</a></li>
+              <li id="button-link"><a target="_self" href="https://hemkeshraina.github.io/get_qr_molog/signup">Sign Up</a></li>
             </ul>
           </div>
         </div>
