--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Chrome apk</a>   
               </li>
               
-              <li id="button-link1"><a href='#'>Sign In</a></li>
+              <li id="button-link1"><a target="_self" href='https://hemkeshraina.github.io/get_qr_molog/login'>Sign In</a></li>
               <li id="button-link"><a target="_self" href="https://hemkeshraina.github.io/get_qr_molog/signup">Sign Up</a></li>
             </ul>
           </div>
