--- a/login.html
+++ b/login.html
@@ -58,7 +58,7 @@
                                     <div class="social-media">
                                         <a href="#facebook" class="fb"><span class="fab fa-facebook" aria-hidden="true"></span>Login with google</a>                                      
                                     </div>
-                                    <p class="already">Don't have an account? <a href="https://hemkeshraina.github.io/get_qr_molog/login">Sign Up</a></p>
+                                    <p class="already">Don't have an account? <a href="https://hemkeshraina.github.io/get_qr_molog/signup">Sign Up</a></p>
                                 </form>
                                 
                             </div>
