--- a/signup.html
+++ b/signup.html
@@ -57,7 +57,7 @@
 
                                     </label>
                                     <button class="btn btn-style mt-3">Register </button>
-                                    <p class="already">Already have an account? <a href="#signin">Login</a></p>
+                                    <p class="already">Already have an account? <a href="https://hemkeshraina.github.io/get_qr_molog/login">Login</a></p>
                                 </form>
                             </div>
                         </div>
