--- a/index.html
+++ b/index.html
@@ -587,23 +587,31 @@
           </div>
         </div>
       <div class="cform">
-        <form class="form-inline" action="/action_page.php">
-          <h1>Any more Questions?</h1>
+        <h1>Any more Questions?</h1>
           <h3>fill the form and we will get back to you</h3><br>
-          <div class="row1">
-            <label for="email">Name:</label>
-            <input type="email" id="email" placeholder="Enter email" name="email">
-            <label for="pwd">Company Name:</label>
-            <input type="password" id="pwd" placeholder="Enter password" name="pswd">
-          </div>
-          <div class="row1">
-            <label for="email">Phone Number:</label>
-            <input type="email" id="email" placeholder="Enter email" name="email">
-            <label for="pwd">Email:</label>
-            <input type="password" id="pwd" placeholder="Enter password" name="pswd">
-          </div>
-          <button type="submit">Submit</button>
+        <form class="form-inline" action="/action_page.php">
+          <div class="form_row">
+            <div class="form_group">
+                <span>Name:</span><br>
+                <input type="text" placeholder="Enter your name">
+            </div>
+            <div class="form_group">
+                <span>Email:</span><br>
+                <input type="text" placeholder="Enter your name">
+            </div>
+        </div>
+        <div class="form_row">
+            <div class="form_group">
+                <span>Contact Number:</span><br>
+                <input type="text" placeholder="Enter your name">
+            </div>
+            <div class="form_group">
+                <span>Address:</span><br>
+                <input type="text" placeholder="Enter your name">
+            </div>
+        </div>
         </form>
+        <button type="submit">Submit</button>
       </div>
       <br><br><br><br>
       <footer id="footer" class="footer-1">
