--- a/dashboard.html
+++ b/dashboard.html
@@ -47,6 +47,7 @@
         <i class="fa fa-bars nav_btn"></i>
       </div>
       <div class="mobile_nav_items">
+        <a href="#"><i class="far fa-user"></i><span>Dashboard</span></a>
         <a href="#"><i class="fa fa-list-ul"></i><span>Dashboard</span></a>
         <a href="#"><i class="fa fa-bolt"></i><span>Active QR's</span></a>
         <a href="#"><i class="fa fa-pause-circle"></i><span>Inactive QR's</span></a>    
@@ -59,8 +60,8 @@
     <!--sidebar start-->
     <div class="sidebar">
       <div class="profile_info">
-        <img src="images/user.png" class="profile_image" alt="">
-        <h4>Rajeev</h4>
+        <img src="images/userc.png" class="profile_image" alt="">
+        <h4>Hemkesh</h4>
       </div>
         <h3>My QR Codes:</h3>
         <a href="#"><i class="fa fa-list-ul"></i><span>Dashboard</span></a>
@@ -74,7 +75,7 @@
     <!--sidebar end-->
     <div class="heading">
         <div class="heading1">
-            <h1>Active</h1>
+            <h1><i class="fas fa-bolt"></i>  Active QR (2)</h1>
         </div>
         <div class="heading2">
             <h2>Last Created  <i class="fa fa-caret-down" aria-hidden="true"></i></h2>
@@ -121,9 +122,9 @@
                       <span class="points p-2"></span>
                       <span class="points p-3"></span>
                     </label>                  
-                    <a href="" class="menu-item item-1"><i class="fa fa-star-o" aria-hidden="true"></i></a>
+                    <a href="" class="menu-item item-1"><i class="fas fa-palette"></i></a>
                     <a href="" class="menu-item item-2"><i class="fa fa-pencil" aria-hidden="true"></i></a>
-                    <a href="" class="menu-item item-3"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
+                    <a href="" class="menu-item item-3"><i class="far fa-folder" aria-hidden="true"></i></a>
                 </div>
               </div>
           </div>
@@ -156,6 +157,17 @@
                   <button class="dbutton">
                     Download  <i class="far fa-arrow-alt-circle-down"></i>
                   </button>
+                  <div class="menu1">
+                    <input type="checkbox" href="#" class="menu1-open" name="menu1-open" id="menu1-open">                
+                    <label class="menu1-open-button" for="menu-open">
+                      <span class="points p-1"></span>
+                      <span class="points p-2"></span>
+                      <span class="points p-3"></span>
+                    </label>                  
+                    <a href="" class="menu1-item item-1"><i class="fas fa-palette"></i></a>
+                    <a href="" class="menu1-item item-2"><i class="fa fa-pencil" aria-hidden="true"></i></a>
+                    <a href="" class="menu1-item item-3"><i class="far fa-folder" aria-hidden="true"></i></a>
+                </div>
               </div>
           </div>
           
@@ -207,6 +219,17 @@
                   <button>
                     <i class="fas fa-download"></i>
                   </button>
+                  <div class="menu1">
+                    <input type="checkbox" href="#" class="menu1-open" name="menu1-open" id="menu1-open">                
+                    <label class="menu1-open-button" for="menu1-open">
+                      <span class="points p-1"></span>
+                      <span class="points p-2"></span>
+                      <span class="points p-3"></span>
+                    </label>                  
+                    <a href="" class="menu1-item item-1"><i class="fa fa-star-o" aria-hidden="true"></i></a>
+                    <a href="" class="menu1-item item-2"><i class="fa fa-pencil" aria-hidden="true"></i></a>
+                    <a href="" class="menu1-item item-3"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
+                </div>
               </div>
           </div>
       </div>
