Build: Details.html

--- a/details.html
+++ b/details.html
@@ -12,11 +12,8 @@
   <body>
     <header>
         <div class="left_area">
-          <img src="logopro.svg" style="position:fixed; top:10px; left:10px; width:250px" alt=""><i class="fa fa-product-hunt" aria-hidden="true" style="color:white"></i>      
+          <img src="logopro.svg" style="width:250px" alt=""><i class="fa fa-product-hunt" aria-hidden="true" style="color:white"></i>      
         </div>
-        <label for="check">
-            <i class="fas fa-arrow-left" id="sidebar_btn"></i>
-          </label>
         <div class="swrapper left_area">
           <div class="searchBar">
             <input id="searchQueryInput" type="text" name="searchQueryInput" placeholder="Search" value="" />
@@ -83,17 +80,22 @@
               </div>
             </div>
           </div>
-          <div class="column" >
-            <h2>Medium</h2>
-            <i class="fa fa-file-text-o" aria-hidden="true" style="font-size:4rem"></i>
-          </div>
-          <div class="column" >
-            <h2>Campaing start</h2>
-            <p>12/02/2021</p>
-          </div>
-          <div class="column" >
-            <h2>Campaign End</h2>
-            <p>12/09/2021</p>
+          <div class="column">
+            <div class="column_div">
+              <i class="fa fa-file-text-o" aria-hidden="true" style="font-size:4rem; color: #060199;"></i>
+            </div>
+            <div class="column_div" >
+              <h2>Medium</h2>
+              <p>Banner</p>
+            </div>
+            <div class="column_div" >
+              <h2>Campaing start</h2>
+              <p>12/02/2021</p>
+            </div>
+            <div class="column_div" >
+              <h2>Campaign End</h2>
+              <p>12/09/2021</p>
+            </div>
           </div>
         </div>
     </div>
