--- a/index.html
+++ b/index.html
@@ -876,17 +876,17 @@
             </div>
             <div class="form_group">
                 <span>Email:</span><br>
-                <input type="text" placeholder="Enter your name">
+                <input type="text" placeholder="Enter your email">
             </div>
         </div>
         <div class="form_row">
             <div class="form_group">
                 <span>Contact Number:</span><br>
-                <input type="text" placeholder="Enter your name">
+                <input type="text" placeholder="Enter your number">
             </div>
             <div class="form_group">
                 <span>Address:</span><br>
-                <input type="text" placeholder="Enter your name">
+                <input type="text" placeholder="Enter your address">
             </div>
         </div>
         </form>
