--- a/login.html
+++ b/login.html
@@ -53,7 +53,7 @@
                                         <p class="remember">Keep me signed in</p>
 
                                     </label>
-                                    <button class="btn btn-style mt-3">Login </button>
+                                    <button class="btn btn-style mt-3" ><a href="dashboard.html" style="color:#fff">Login </a></button>
                                     <br> <br> <br>
                                     <div class="social-media">
                                         <a href="#facebook" class="fb"><span class="fab fa-facebook" aria-hidden="true"></span>Login with google</a>                                      
