--- a/signup.html
+++ b/signup.html
@@ -42,10 +42,10 @@
                                         <input type="email" name="Email" placeholder="Select Your Industry" required="" autofocus>
                                     </div>
                                     <div class="one-frm">
-                                        <input type="email" name="Email" placeholder="Work Email" required="" autofocus>
+                                        <input type="text" name="Email" placeholder="Work Email" required="" autofocus>
                                     </div>
                                     <div class="one-frm">
-                                        <input type="email" name="Email" placeholder="Where to you want to print ?" required="" autofocus>
+                                        <input type="text" name="Email" placeholder="Where to you want to print ?" required="" autofocus>
                                     </div>
                                     <div class="one-frm">
                                         <input type="password" name="Password" placeholder="Password" required="">
@@ -56,7 +56,7 @@
                                         <p class="remember">I agree with the Tearms of service and Privacy policy</p>
 
                                     </label>
-                                    <button class="btn btn-style mt-3">Register </button>
+                                    <button class="btn btn-style mt-3"><a href="https://hemkeshraina.github.io/get_qr_molog/">Register</a></button>
                                     <p class="already">Already have an account? <a href="https://hemkeshraina.github.io/get_qr_molog/login">Login</a></p>
                                 </form>
                             </div>
