--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@
         </div>
         <div class="container my-5 faq">
           <div class="text-center mb-5">
-            <h1 class="text-capitalize font-weight-bold">Frequently Asked <span style="color: #9B5DE5;">Questions</span></h1>
+            <h1 class="text-capitalize font-weight-bold">Frequently Asked <span style="color: #060199;">Questions</span></h1>
           </div>
           <hr class="new4">
           <div class="row">
