--- a/signup.html
+++ b/signup.html
@@ -30,7 +30,7 @@
                         <img src="logo.svg" alt="Your logo" title="Your logo" style="height:85px;margin-bottom: 30px;" />
                     </a>
                     <h1><a class="brand-logo" href=""></a>Create, Manage and Track</h1>
-                        <h1 style="color:#8566FF;">all your QR Codes <span style="color:#344FA1;">in one</span></h1>                   
+                        <h1 style="color:#060199;">all your QR Codes <span style="color:#344FA1;">in one</span></h1>                   
                         <h6>Sign up now and try all features free for 14 days</h6>
                 </div>
                 <div class="gcard">
@@ -56,7 +56,7 @@
                                         <p class="remember">I agree with the Tearms of service and Privacy policy</p>
 
                                     </label>
-                                    <button class="btn btn-style mt-3"><a href="https://hemkeshraina.github.io/get_qr_molog/">Register</a></button>
+                                    <button class="btn btn-style mt-3"><a href="https://hemkeshraina.github.io/get_qr_molog/" style="color:#fff">Register</a></button>
                                     <p class="already">Already have an account? <a href="https://hemkeshraina.github.io/get_qr_molog/login">Login</a></p>
                                 </form>
                             </div>
