--- a/dashboard.html
+++ b/dashboard.html
@@ -104,7 +104,7 @@
                           <small>Scans</small>
                       </p>
                       <button>
-                          <a href="details.html">Details </a><i class="fa fa-arrow-right" aria-hidden="true"></i>
+                          <a href="details.html" style="color:#060199">Details </a><i class="fa fa-arrow-right" aria-hidden="true"></i>
                       </button>
                   </div>
                   <div>
@@ -146,7 +146,7 @@
                           <small>Scans</small>
                       </p>
                       <button>
-                        <a href="details.html">Details </a><i class="fa fa-arrow-right" aria-hidden="true"></i>
+                        <a href="details.html" style="color:#060199">Details </a><i class="fa fa-arrow-right" aria-hidden="true"></i>
                       </button>
                   </div>
                   <div>
